Fixed Sidbar Spacing

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -80,7 +80,7 @@ body {
     font-size: 20px;
     color: #000000;
     display: block;
-    margin-top: 7px;
+    margin-top: 10px;
     text-align: center;
     width: 180px;
   }
